--- a/data/authors.yml
+++ b/data/authors.yml
@@ -1,4 +1,4 @@
-- name: "yourName"
-  photo: "myAvatar.jpg"
-  url: "https://myURLofChoice.domain"
-  bio: "It's time to flex. Write a short or not-so-short summary about yourself."
+- name: "jeyziel Gama"
+  photo: "jeyziel.jpg"
+  url: "https://twitter.com/JeyzielGama/"
+  bio: "Baiano de juazeiro. Entusiasta de processamento de linguagem natural e chatbot."
