--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "/"
 languageCode = "pt-br"
-title = "The Last Question"
+title = "J.S GAMA"
 description = "teste"
 theme = "hugo-swift-theme"
 canonifyurls = true
